.opsera-new-16/k8s/overlays/dev/namespace.yaml
# ════════════════════════════════════════════════════════════════════════════
# KUBERNETES NAMESPACE - new-16 dev
# Generated by: Opsera Code-to-Cloud Enterprise v0.915
# ════════════════════════════════════════════════════════════════════════════
apiVersion: v1
kind: Namespace
metadata:
  name: opsera-new-16-dev
  labels:
    app: new-16
    environment: dev
    tenant: opsera
    app.kubernetes.io/name: new-16
    app.kubernetes.io/managed-by: opsera
